# pg-worm

./: Cargo.toml  LICENSE-MIT  README.md
.github/: README.md
.github/workflows/: rust.yml
pg-worm/: Cargo.toml  README.md
pg-worm-derive/: Cargo.toml  LICENSE-Apache-2.0  README.md
pg-worm-derive/src/: lib.rs  parse.rs
pg-worm-derive/tests/: easy.rs
pg-worm/benches/: bench.rs
pg-worm/examples/: simple_bench.rs  simple_query.rs
pg-worm/src/: config.rs  lib.rs  pool.rs
pg-worm/src/migration/: mod.rs
pg-worm/src/query/: delete.rs  filter.rs  insert.rs  join.rs  mod.rs  select.rs  table.rs  transaction.rs  update.rs
pg-worm/tests/: connect.rs  easy.rs  test.rs
src/: lib.rs  main.rs
tests/: connect.rs
