[package]
name = "pg-worm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"

serde = { version = "1.0.104", features = ["derive"] }

tokio = { version = "0.2", features = ["full"] }
tokio-postgres = "0.5"

phf = { version = "0.11.1", features = ["macros"] }
pg-worm-derive = { version = "0.1.0", path = "pg-worm-derive" }
