[package]
name = "pg-worm"
version = "0.1.0"
edition = "2021"
authors = ["Einliterflasche <einliterflasche@pm.me>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"

tokio-postgres = "0.7"

# phf = { version = "0.11.1", features = ["macros"] }
pg-worm-derive = { version = "0.1.0", path = "pg-worm-derive" }

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
