[package]
name = "pg-worm"
version = "0.1.0"
edition = "2021"
authors = ["Einliterflasche <einliterflasche@pm.me>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1.0"
anyhow = "1.0"
tokio-postgres = "0.7"
once_cell = "1.17"

pg-worm-derive = { version = "0.1", path = "pg-worm-derive" }

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
