[package]
name = "pg-worm-derive"
description = "Proc macro for the pg-worm crate."
version = "0.7.0"
edition = "2021"
authors = ["Einliterflasche <einliterflasche@pm.me>"]
license = "MIT OR Apache-2.0"
keywords = ["database", "postgresql", "postgres", "orm", "async"]
categories = ["database", "asynchronous"]
repository = "https://github.com/Einliterflasche/pg-worm"
homepage = "https://github.com/Einliterflasche/pg-worm"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "2.0", features = ["derive"] }
postgres-types = "0.2"
convert_case = "0.6"

[features]
serde-json = []
time = []
uuid = []
