[package]
name = "pg-worm"
version = "0.5.0"
edition = "2021"
authors = ["Einliterflasche <einliterflasche@pm.me>"]
license = "MIT OR Apache-2.0"
description = "An async, fully-typed and straightforward ORM for PostgreSQL databases"
keywords = ["database", "postgresql", "postgres", "orm", "async"]
categories = ["database", "asynchronous"]
repository = "https://github.com/Einliterflasche/pg-worm"
homepage = "https://github.com/Einliterflasche/pg-worm"

[dependencies]
thiserror = "1.0"
tokio-postgres = "0.7"
once_cell = "1.17"
async-trait = "0.1"

pg-worm-derive = "0.5"

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
