[package]
name = "pg-worm"
version = "0.5.0"
edition = "2021"
authors = ["Einliterflasche <einliterflasche@pm.me>"]
license = "MIT OR Apache-2.0"
description = "An async, fully-typed and straightforward ORM for PostgreSQL databases"
keywords = ["database", "postgresql", "postgres", "orm", "async"]
categories = ["database", "asynchronous"]
repository = "https://github.com/Einliterflasche/pg-worm"
homepage = "https://github.com/Einliterflasche/pg-worm"

[dependencies]
thiserror = "1.0"
deadpool-postgres = "0.10"
tokio-postgres = "0.7"
async-trait = "0.1"
futures = "0.3"

pg-worm-derive = { version = "0.5", path = "../pg-worm-derive" }

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
