[package]
name = "pg-worm"
version = "0.7.0"
edition = "2021"
authors = ["Einliterflasche <einliterflasche@pm.me>"]
license = "MIT OR Apache-2.0"
description = "An async, fully-typed and straightforward ORM for PostgreSQL databases"
keywords = ["database", "postgresql", "postgres", "orm", "async"]
categories = ["database", "asynchronous"]
repository = "https://github.com/Einliterflasche/pg-worm"
homepage = "https://github.com/Einliterflasche/pg-worm"

[dependencies]
# Core dependencies
thiserror = "1.0"
deadpool-postgres = "0.10"
tokio-postgres = { version = "0.7", default-features = false } 
async-trait = "0.1"
futures-util = { version = "0.3", default-features = false }
pg-worm-derive = "0.7"

[dev-dependencies]
tokio = { version = "1", features = ["full"] }

[features]
serde-json = ["tokio-postgres/with-serde_json-1", "pg-worm-derive/serde-json"]
uuid = ["tokio-postgres/with-uuid-1", "pg-worm-derive/uuid"]
time = ["tokio-postgres/with-time-0_3", "pg-worm-derive/time"]
